--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,15 @@ nav ul li{
     
 }
 
+.foot{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+}
+
 
 
 .bottom{
