--- a/styles.css
+++ b/styles.css
@@ -173,3 +173,12 @@ nav ul li{
    opacity: 0;
    transition: opacity 0.4s ease-in-out;
 }
+
+.foot{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+}
